# Luminara-Engine

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-COMMERCIAL  README.md  test_motor_debug.rs
crates/luminara/: Cargo.toml
crates/luminara/src/: lib.rs
crates/luminara/tests/: default_plugins_test.rs  workflow_integration_test.rs
crates/luminara_ai_agent/: Cargo.toml
crates/luminara_ai_agent/docs/: performance_advisor.md
crates/luminara_ai_agent/src/: code_verifier.rs  context_engine.rs  dry_run.rs  intent_resolver.rs  lib.rs  orchestrator.rs  performance.rs  sandbox.rs  schema.rs  semantic_index.rs  static_analyzer.rs  timeline.rs  visual_feedback.rs
crates/luminara_ai_agent/tests/: agent_tests.rs  analyzer_tests.rs  code_verification_test.rs  context_tests.rs  dry_run_tests.rs  integration_tests.rs  intent_tests.rs  performance_advisor_test.rs  performance_tests.rs  property_entity_reference_resolution_test.rs  property_performance_impact_prediction_test.rs  property_static_analysis_test.rs  property_viewport_capture_format_test.rs  sandbox_tests.rs  schema_tests.rs  semantic_tests.rs  timeline_tests.rs  verifier_tests.rs  visual_feedback_test.rs  visual_tests.rs  workflow_tests.rs
crates/luminara_asset/: Cargo.toml
crates/luminara_asset/docs/: parallel_loading.md  placeholder_assets.md  retry_logic.md
crates/luminara_asset/examples/: placeholder_demo.rs
crates/luminara_asset/src/: allocator.rs  handle.rs  hot_reload.rs  lib.rs  loader.rs  meta.rs  placeholder.rs  plugin.rs  processor.rs  server.rs  storage.rs
crates/luminara_asset/tests/: asset_tests.rs  async_loading_test.rs  core_functionality_test.rs  handle_serialization_test.rs  handle_test.rs  hot_reload_test.rs  parallel_loading_test.rs  placeholder_test.rs  property_asset_caching_test.proptest-regressions  property_asset_caching_test.rs  property_async_loading_non_blocking_test.rs  property_error_handling_test.proptest-regressions  property_error_handling_test.rs  property_hot_reload_test.proptest-regressions  property_hot_reload_test.rs  property_load_retrieve_test.proptest-regressions  property_load_retrieve_test.rs  property_placeholder_display_test.rs  retry_logic_test.rs
crates/luminara_audio/: Cargo.toml
crates/luminara_audio/src/: asset.rs  components.rs  lib.rs  plugin.rs  systems.rs
crates/luminara_audio/tests/: property_audio_loading_test.rs  property_audio_looping_test.rs  property_audio_playback_test.proptest-regressions  property_audio_playback_test.rs  property_spatial_audio_test.proptest-regressions  property_spatial_audio_test.rs
crates/luminara_core/: Cargo.toml
crates/luminara_core/docs/: atomic_command.md  command_dependencies.md  core_commands.md  plugin_dependencies.md  plugin_execution_order_verification.md  plugin_testing_framework.md  plugin_testing_framework_implementation_summary.md  undo_command.md
crates/luminara_core/examples/: plugin_dependencies_demo.rs
crates/luminara_core/src/: app.rs  archetype.rs  atomic_command.rs  bundle.rs  change_detection.rs  command_dependencies.rs  commands.rs  component.rs  console.rs  entity.rs  error.rs  event.rs  lib.rs  plugin.rs  plugin_test.rs  query.rs  reflect.rs  resource.rs  schedule.rs  shared_types.rs  system.rs  time.rs  undo_command.rs  world.rs
crates/luminara_core/tests/: atomic_command_test.rs  command_dependencies_integration_test.rs  core_commands_test.rs  ecs_tests.rs  enum_collection_reflection_test.rs  field_access_test.rs  parallel_test.rs  parallel_tests.rs  performance.rs  plugin_dependency_test.rs  plugin_execution_order_test.rs  plugin_testing_framework_test.rs  plugin_tests.rs  property_command_undo_roundtrip_test.rs  property_component_metadata_test.rs  property_ecs_core_systems_test.proptest-regressions  property_ecs_core_systems_test.rs  property_plugin_build_test.rs  property_plugin_component_registration_test.rs  property_plugin_dependency_validation_test.rs  property_plugin_execution_order_test.rs  property_plugin_system_registration_test.rs  reflect_registry_integration_test.rs  reflect_test.rs  stress_test.rs  system_tests.rs  undo_command_test.rs
crates/luminara_db/: Cargo.toml  README.md
crates/luminara_db/benches/: db_bench.rs
crates/luminara_db/docs/: asset_dependency_tracking.md  ecs_synchronization.md  operation_timeline.md  ron_migration.md  sync_latency_test_fix.md  wasm_indexeddb_support.md
crates/luminara_db/examples/: migrate_ron_scene.rs
crates/luminara_db/migrations/: 001_initial_schema.surql  001_initial_schema_down.surql
crates/luminara_db/src/: config.rs  connection.rs  database.rs  error.rs  lib.rs  migration.rs  plugin.rs  query.rs  schema.rs  timeline.rs
crates/luminara_db/tests/: asset_dependency_test.rs  basic_crud_test.rs  ecs_sync_test.rs  entity_relationships_test.rs  operation_timeline_test.rs  property_database_sync_latency_test.proptest-regressions  property_database_sync_latency_test.rs  property_operation_metadata_completeness_test.rs  property_operation_undo_correctness_test.rs  test_asset_store.rs  test_scene_store.rs  test_serialization.rs  test_undo_store.rs  wasm_indexeddb_test.rs
crates/luminara_diagnostic/: Cargo.toml
crates/luminara_diagnostic/src/: diagnostics.rs  frame_stats.rs  lib.rs  logging.rs  plugin.rs  profiler.rs
crates/luminara_diagnostic/tests/: diagnostic_tests.rs
crates/luminara_editor/: Cargo.toml  Cargo_test.toml  README.md  check.json
crates/luminara_editor/docs/: badge_notifications.md  global_search_database_integration.md  (+13 more)
crates/luminara_input/: Cargo.toml  README.md
crates/luminara_math/: Cargo.toml
crates/luminara_physics/: Cargo.toml
crates/luminara_render/: Cargo.toml
crates/luminara_scene/: Cargo.toml
crates/luminara_script_lua/: Cargo.toml
crates/luminara_script_wasm/: Cargo.toml  luminara-guest.wit
crates/luminara_window/: Cargo.toml
examples/editor_demo/: Cargo.toml
examples/fluid_viz_demo/: Cargo.toml  README.md
examples/phase0-1_demo/: Cargo.toml  README.md  run.bat  run.sh
examples/phase1_demo/: Cargo.toml  README.md
tools/luminara_mcp_server/: Cargo.toml
(+595 files in other folders)
