[workspace]
resolver = "2"
members = [
    "crates/*",
    "tools/*",
    "examples/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Luminara Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
luminara_core = { path = "crates/luminara_core" }
luminara_reflect_derive = { path = "crates/luminara_reflect_derive" }
luminara_math = { path = "crates/luminara_math" }
luminara_window = { path = "crates/luminara_window" }
luminara_input = { path = "crates/luminara_input" }
luminara_asset = { path = "crates/luminara_asset" }
luminara_render = { path = "crates/luminara_render" }
luminara_scene = { path = "crates/luminara_scene" }
luminara_physics = { path = "crates/luminara_physics" }
luminara_audio = { path = "crates/luminara_audio" }
luminara_platform = { path = "crates/luminara_platform" }
luminara_diagnostic = { path = "crates/luminara_diagnostic" }
luminara_script = { path = "crates/luminara_script" }
luminara_script_lua = { path = "crates/luminara_script_lua" }
luminara_script_wasm = { path = "crates/luminara_script_wasm" }
luminara_ai_agent = { path = "crates/luminara_ai_agent" }
luminara_mcp_server = { path = "tools/luminara_mcp_server" }
glam = "0.28"
winit = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
bincode = "1.3"
instant = "0.1"
thiserror = "2.0"

# Performance optimization profiles
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true  # Strip symbols for smaller binaries
panic = "abort"  # Smaller binaries, faster compilation

[profile.bench]
inherits = "release"

# Development profile optimizations
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"  # Faster on macOS
incremental = true
codegen-units = 256  # More units = faster compilation

# Optimize dependencies even in dev mode
[profile.dev.package."*"]
opt-level = 3
debug = false

# Fast development profile - balance between speed and performance
[profile.fast-dev]
inherits = "dev"
opt-level = 1
debug = true
incremental = true

[profile.fast-dev.package."*"]
opt-level = 3
debug = false

# Enable target-specific optimizations
[profile.release.package.luminara_math]
opt-level = 3
codegen-units = 1

[profile.bench.package.luminara_math]
opt-level = 3
codegen-units = 1
