[package]
name = "luminara_core"
version.workspace = true
edition.workspace = true

[features]
math = []

[dependencies]
bevy = { version = "0.14", features = ["default", "bevy_core_pipeline", "bevy_render", "bevy_pbr"] }
luminara_math = { path = "../luminara_math", default-features = false }

[dev-dependencies]
proptest = "1.5"
