[package]
name = "luminara_db"
version = "0.1.0"
edition = "2021"
description = "Embedded database layer for Luminara Engine (SurrealDB)"

[features]
default = ["surrealkv"]
surrealkv = ["surrealdb/kv-surrealkv"]
rocksdb = ["surrealdb/kv-rocksdb"]
indexeddb = ["surrealdb/kv-indxdb"]    # WASM
memory = ["surrealdb/kv-mem"]          # Test

[dependencies]
surrealdb = { version = "2.0", default-features = false, features = ["protocol-ws"] }
luminara_core = { path = "../luminara_core" }
luminara_math = { path = "../luminara_math" }
luminara_db_derive = { path = "../luminara_db_derive" }
luminara_mcp = { package = "luminara_mcp_server", path = "../../tools/luminara_mcp_server" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
thiserror = "2.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
semver = { version = "1.0", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "db_bench"
harness = false
