[package]
name = "luminara_db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# SurrealDB embedded mode
surrealdb = { version = "2.1", default-features = false }

# Serialization - Explicitly defining features to fix compilation issues
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"

# Error handling
thiserror = "2.0"

# Async runtime
futures = "0.3"

# Logging
log = "0.4"

# Time handling
chrono = "0.4"

# ECS integration
luminara_core = { path = "../luminara_core" }
bevy_ecs = "0.14"
async-recursion = "1.1.1"

# Tokio with conditional features for WASM
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.41", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.41", features = ["sync", "macros", "io-util", "rt", "time"] }

[features]
default = ["memory"]
# Storage backends
memory = ["surrealdb/kv-mem"]
rocksdb = ["surrealdb/kv-rocksdb"]
surrealkv = ["surrealdb/kv-surrealkv"]
# WASM support with IndexedDB
wasm = ["surrealdb/kv-indxdb"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.13"
proptest = "1.5"
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
