[package]
name = "luminara_diagnostic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core dependencies
luminara_core = { workspace = true }
luminara_math = { workspace = true }
luminara_asset = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Profiling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Graph analysis
petgraph = "0.6"

# Async runtime for tooling
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# File system operations
walkdir = "2.5"

# TOML parsing for Cargo.toml
toml = "0.8"

# Regex for code analysis
regex = "1.10"

# Time utilities
instant = { workspace = true }
chrono = "0.4"

# CPU detection
num_cpus = "1.16"

# GPU profiling
wgpu = "22"
log = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.10"
proptest = "1.4"
env_logger = "0.11"

[[bench]]
name = "diagnostic_benchmarks"
harness = false

[lib]
name = "luminara_diagnostic"
path = "src/lib.rs"
