[package]
name = "luminara_editor"
version = "0.1.0"
edition = "2021"
authors = ["Luminara Team"]
license = "MIT OR Apache-2.0"
description = "GPUI-based editor UI for Luminara Engine"

[dependencies]
# Luminara Engine dependencies
luminara_core = { path = "../luminara_core" }
luminara_math = { path = "../luminara_math" }
luminara_asset = { path = "../luminara_asset" }
luminara_db = { path = "../luminara_db" }

# Bevy Engine
bevy = { version = "0.14", default-features = false, features = ["bevy_core_pipeline", "bevy_render", "bevy_pbr"] }
crossbeam-channel = "0.5"

# GPUI framework
# Note: GPUI is part of the Zed repository, using a specific stable release
# Using release v0.159.5 from October 30, 2024 (sha: bcf6806)
gpui = { git = "https://github.com/zed-industries/zed", tag = "v0.159.5" }

# WGPU for 3D viewport rendering
wgpu = "22"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
thiserror = "2.0"
anyhow = "1.0"
parking_lot = "0.12"
dirs = "5.0"
chrono = "0.4"
surrealdb = "2.1.2"
log = "0.4"

# Windows API (for keyboard input)
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[dev-dependencies]
proptest = "1.0"
