[package]
name = "luminara_editor"
version = "0.1.0"
edition = "2021"
authors = ["Luminara Team"]
license = "MIT OR Apache-2.0"
description = "Vizia-based editor UI for Luminara Engine"

[dependencies]
# Luminara Engine dependencies
luminara_core = { path = "../luminara_core" }
luminara_math = { path = "../luminara_math" }
luminara_asset = { path = "../luminara_asset" }
luminara_render = { path = "../luminara_render" }
luminara_scene = { path = "../luminara_scene" }
luminara_input = { path = "../luminara_input" }
luminara_db = { path = "../luminara_db" }

# Vizia framework for UI
vizia = "0.3.0"

# WGPU for 3D viewport rendering
wgpu = "22"
bytemuck = { version = "1.16", features = ["derive"] }

# Winit for creating separate 3D window
# Note: Using 0.30 for new development
winit = "0.30"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
thiserror = "2.0"
anyhow = "1.0"
parking_lot = "0.12"
dirs = "5.0"
chrono = "0.4"
surrealdb = "2.1.2"
log = "0.4"

# Windows API (for keyboard input)
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[[bin]]
name = "luminara-editor"
path = "src/main.rs"

[[example]]
name = "integrated_editor"
path = "examples/integrated_editor.rs"

[[example]]
name = "hybrid_editor"
path = "examples/hybrid_editor.rs"

[dev-dependencies]
proptest = "1.0"
env_logger = "0.11"
