[package]
name = "luminara_math"
version.workspace = true
edition.workspace = true

[dependencies]
glam = { workspace = true, features = ["serde"] }
serde = { workspace = true }
luminara_core = { workspace = true }

# For exact predicates
smallvec = "1.11"

# For sparse linear algebra (Laplacian solvers)
sprs = "0.11"
nalgebra = { version = "0.32", features = ["sparse"] }

# For symbolic computation
rustc-hash = "1.1"

# For SIMD optimization
wide = "0.7"

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"
approx = "0.5"
