[package]
name = "luminara_math"
version.workspace = true
edition.workspace = true

[features]
default = ["ecs"]
ecs = ["luminara_core"]

[dependencies]
glam = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = "1.0"
luminara_core = { path = "../luminara_core", optional = true }
luminara_reflect_derive = { workspace = true }

# For serialization validation
ron = { workspace = true }
bincode = { workspace = true }

# For exact predicates
smallvec = "1.11"

# For sparse linear algebra (Laplacian solvers)
sprs = "0.11"
nalgebra = { version = "0.32", features = ["sparse"] }

# For symbolic computation
rustc-hash = "1.1"

# For SIMD optimization
wide = "0.7"

# For parallel processing
rayon = "1.8"

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"
approx = "0.5"
luminara_asset = { path = "../luminara_asset" }

[[bench]]
name = "math_benchmarks"
harness = false

[[bench]]
name = "motor_vs_quat_benchmark"
harness = false
