[package]
name = "luminara_render"
version.workspace = true
edition.workspace = true

[dependencies]
wgpu = "22"
bytemuck = { version = "1.16", features = ["derive"] }
pollster = "0.3"
log = "0.4"
winit = "0.30"
luminara_core = { workspace = true }
luminara_math = { workspace = true }
luminara_window = { workspace = true }
luminara_audio = { workspace = true }
luminara_diagnostic = { workspace = true }
thiserror = { workspace = true }
gltf = { version = "1.4", features = ["import"] }
luminara_asset = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "hdr"] }
serde = { workspace = true }
serde_json = "1.0"
luminara_reflect_derive = { workspace = true }

[dev-dependencies]
proptest = "1.5"
criterion = "0.5"

[[bench]]
name = "instancing_benchmark"
harness = false

[[bench]]
name = "frustum_culling_benchmark"
harness = false
