[package]
name = "luminara_scene"
version.workspace = true
edition.workspace = true

[dependencies]
luminara_core = { workspace = true }
luminara_math = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
glam = { workspace = true }
once_cell = "1.20"

[dev-dependencies]
proptest = "1.5"
