[package]
name = "luminara_script_lua"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
luminara_script = { path = "../luminara_script" }
luminara_core = { workspace = true }
luminara_math = { workspace = true }
luminara_input = { workspace = true }
luminara_scene = { workspace = true }
luminara_physics = { workspace = true }
luminara_audio = { workspace = true }
mlua = { version = "0.9", features = ["lua54", "vendored", "async", "send"] }
thiserror = { workspace = true }

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
tempfile = "3.10"
