[package]
name = "luminara_script_wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
luminara_script = { path = "../luminara_script" }
luminara_core = { workspace = true }
luminara_math = { workspace = true }
luminara_input = { workspace = true }
wasmtime = "18.0"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
wat = "1.0"
