[package]
name = "luminara_mcp_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
luminara_core = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
